# everyday_joke

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  pyproject.toml
src/everyday_joke/: config.py
src/everyday_joke/bot/: __main__.py  config.py
src/everyday_joke/bot/handlers/: setup.py  start.py  subscribe.py  user.py
src/everyday_joke/bot/keyboards/: button.py  callback.py
src/everyday_joke/bot/locales/: __init__.py  en.py
src/everyday_joke/bot/middlewares/: infra.py  setup.py
src/everyday_joke/bot/services/: commands.py
src/everyday_joke/business/: base.py  subscribe.py  user.py
src/everyday_joke/business/exceptions/: user.py
src/everyday_joke/infra/db/: config.py  main.py
src/everyday_joke/infra/db/alembic/: env.py
src/everyday_joke/infra/db/alembic/versions/: 31a55a02a4c9_.py  fb863a465321_.py  fd7f126acba7_.py
src/everyday_joke/infra/db/models/: user.py
src/everyday_joke/infra/joke/: main.py
src/everyday_joke/infra/rabbitmq/: config.py  main.py
src/everyday_joke/infra/telegram/: main.py
src/everyday_joke/scheduler/: __main__.py  config.py
tests/functional/: conftest.py  test_subscribe.py
