[tool.poetry]
name = "everyday-joke"
version = "0.1.0"
description = ""
authors = ["Vadim Radzih <iphonevadim2003@gmail.com>"]
readme = "README.md"
packages = []

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3b"
pyjokes = "^0.6.0"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.6"
greenlet = "^2.0.2"
aio-pika = "^9.1.5"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"
pytest-asyncio = "^0.21.1"
teletdd = {git = "git@github.com:radzih/teletdd.git"} # For now it`s private repo, cause it`s in alfa stage

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
